--- a/work/connect.ipynb
+++ b/work/connect.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "4a9273e3-8dee-4498-83a1-18abaecd5a23",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c887b0ea-d245-4c07-97ad-fa011bdc7715",
    "metadata": {},
    "outputs": [
@@ -107,20 +107,20 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2</td>\n",
-       "      <td>??</td>\n",
+       "      <td>Benson</td>\n",
        "      <td>25</td>\n",
-       "      <td>2023-09-11 06:49:12</td>\n",
+       "      <td>2023-09-11 06:53:52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  id name age      entry_timestamp\n",
-       "0  2   ??  25  2023-09-11 06:49:12"
+       "  id    name age      entry_timestamp\n",
+       "0  2  Benson  25  2023-09-11 06:53:52"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
