--- a/connect.ipynb
+++ b/connect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "26fc9fcd-a43e-4aee-8acb-9e11c9fb47da",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "8d0409b4-4876-4449-b617-c61d3d04e078",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "4a9273e3-8dee-4498-83a1-18abaecd5a23",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "c887b0ea-d245-4c07-97ad-fa011bdc7715",
    "metadata": {},
    "outputs": [
@@ -107,20 +107,20 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2</td>\n",
-       "      <td>??</td>\n",
+       "      <td>Benson</td>\n",
        "      <td>25</td>\n",
-       "      <td>2023-09-11 06:49:12</td>\n",
+       "      <td>2023-09-11 06:53:52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  id name age      entry_timestamp\n",
-       "0  2   ??  25  2023-09-11 06:49:12"
+       "  id    name age      entry_timestamp\n",
+       "0  2  Benson  25  2023-09-11 06:53:52"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,6 +133,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "240e3390-51fd-407b-81f7-206315bc2bf8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95f1fd77-b2ce-409c-a97c-0ddca1ba0c4a",
    "metadata": {},
    "outputs": [],
    "source": []
